# example-forc-plugins

./: .gitignore  README.md
forc-index-rs/: .gitignore  Cargo.toml  README.md
forc-index-rs/sample-project/: Forc.toml
forc-index-rs/src/: main.rs
forc-index-ts/: .gitignore  README.md  deno.json  forc-index.ts
forc-index-ts/sample-project/: Forc.toml
forc-index-ts/sample-project/src/: main.sw
forc-ts-node/: package.json  tsconfig.json
forc-ts-node/sample-abi/: sample-abi.json  sample-bin-hash
forc-ts-node/src/: index.ts
forc-tsgen/: README.md  package.json
