[package]
name = "forc-index"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "forc-index"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = { version = "2.1.0", default-features = false }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false, features = ["alloc"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
